<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">HW-Manager</string>
    <string name="app_current_version">0.7 (22.10.2014)</string>
    
    <!-- Titles -->
    <string name="title_subjects">Subjects</string>
    <string name="title_homework">Homework</string>
    <string name="title_addhomework">Add Homework</string>
    
    <!-- Menu Items -->
    <string name="action_add">Add</string>
    <string name="action_delete">Delete everything</string>
    <string name="action_settings">Settings</string>
    
    <!-- Homework Page -->
    <string name="hw_subject">Subject:</string>
    <string name="hw_until">Until:</string>
    <string name="hw_urgent">Urgent?</string>
    <string name="hw_homework">Homework:</string>
    <string name="hw_add">Add</string>
    
    <!-- Preferences Page -->    
    <string name="pref_subjects">Subjects</string>
    <string name="pref_subjects_add">Add a subject</string>
    <string name="pref_subjects_add_summary"><!-- Empty --></string>
    <string name="pref_subjects_overview">Overview</string>
    <string name="pref_subjects_overview_summary">A list containing all subjects</string>
    <string name="pref_subjects_reset">Reset</string>
    <string name="pref_subjects_reset_summary">Reset the subjects list to the default value</string>
    
    <string name="pref_about">About</string>
    <string name="pref_about_credits">Credits</string>
    <string name="pref_about_credits_summary">Copyleft 2014: GPLv2 or later\nMainly developed by Nico Alt</string>
    <string name="pref_about_current_version">Current Version</string>
    
    <string name="pref_feedback">Feedback</string>
    <string name="pref_feedback_share">Share</string>
    <string name="pref_feedback_share_summary">Share this app with a friend</string>
    <string name="pref_feedback_playstore">Play Store</string>
    <string name="pref_feedback_playstore_summary">Review the app in the Google Play Store</string>
    <string name="pref_feedback_mail">Mail</string>
    <string name="pref_feedback_mail_summary">Send a mail to the developer</string>
    
    <!-- Dialogs -->
    <string name="dialog_addSubject">Add Subject</string>
    <string name="dialog_addSubject_message">Which subject do you want to add?</string>
    
    <string name="dialog_delete">Delete</string>
    <string name="dialog_really_delete_hw">Do you really want to delete all homework?</string>
    <string name="dialog_really_delete_subs">Do you really want to delete all subjects?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- Intents -->
    <string name="intent_mail">Send a mail to the developer</string>
    <string name="intent_share_title">Share</string>
    <string name="intent_share_text">Hey, don´t you want to test the HW-Manager? You can download it here: https://play.google.com/store/apps/details?id=de.nico.ha_manager</string>
    
    <!-- Toasts -->
    <string name="toast_have2enter">You have to enter something!</string>
    <string name="added">added</string>
    
    <!-- Homework String Items -->
    <string name="action_urgent">Urgent!</string>
    
    <!-- Default Subject Array -->
    <string-array name="subjects">
        <item>Art</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>English</item>
        <item>Ethics</item>
        <item>Geographics</item>
        <item>German</item>
        <item>French</item>
        <item>History</item>
        <item>Latin</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Physics</item>
        <item>Politics and Economics</item>
        <item>Religion</item>
        <item>Spanish</item>
        <item>Sports</item>
    </string-array>
    
    <!-- Days Array -->
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Mo²</item>
        <item>Tu²</item>
        <item>We²</item>
        <item>Th²</item>
        <item>Fr²</item>
        <item>Mo³</item>
        <item>Tu³</item>
        <item>We³</item>
        <item>Th³</item>
        <item>Fr³</item>
    </string-array>

</resources>
