<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="@string/hw_subject"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinsubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_text_subject_add"
        android:layout_alignStart="@+id/edit_text_subject_add"
        android:layout_alignTop="@+id/text_subject" />

    <EditText
        android:id="@+id/edit_text_subject_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_subject_add"
        android:layout_toRightOf="@+id/text_subject_add"
        android:layout_toEndOf="@+id/text_subject_add"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_subject_add"
        android:layout_alignStart="@+id/text_subject_add"
        android:layout_below="@+id/spinsubject"
        android:layout_marginTop="15dp"
        android:text="@string/hw_until"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/until"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinsubject"
        android:layout_alignStart="@+id/spinsubject"
        android:layout_alignTop="@+id/text_until"
        android:entries="@array/days" />

    <TextView
        android:id="@+id/text_subject_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_subject"
        android:layout_alignStart="@+id/text_subject"
        android:layout_below="@+id/until"
        android:layout_marginTop="15dp"
        android:text="@string/hw_homework"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/urgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_text_subject_add"
        android:layout_alignStart="@+id/edit_text_subject_add"
        android:layout_below="@+id/edit_text_subject_add"
        android:layout_marginTop="15dp"
        android:text="@string/hw_urgent" />

    <Button
        android:id="@+id/button_add_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/urgent"
        android:layout_alignStart="@+id/urgent"
        android:layout_below="@+id/urgent"
        android:layout_marginTop="50dp"
        android:onClick="add_homework"
        android:text="@string/hw_add" />

</RelativeLayout>
